2012-01-12 <Gustaf.Neumann@wu-wien.ac.at>
	* xotcl.c Backport from nsf: when processing arguments with
	leading dashes in "configure", accept only method names without
	spaces. This solves a problem with Tcl8.4 + ns_eval where the
	output of the serializer could not be processed by eval (a [list
	..] was lost).

2011-12-22 <Gustaf.Neumann@wu-wien.ac.at>
	* Httpd: force GMT dates as required by RFC

2011-11-12 <Gustaf.Neumann@wu-wien.ac.at>
	* Removed obsolete CVS-$Ids
	* Updated dates of Copyrights
	* Removed unneeded c++ hints for Emacs

2011-11-02 <Gustaf.Neumann@wu-wien.ac.at>
	* Release of XOTcl 1.6.7

2011-11-01 <Gustaf.Neumann@wu-wien.ac.at>
	* xotcl.c: some c-cleanup
	* library files: require exact version numbers to avoid conflicts
	  with XOTcl 2.0

2011-08-07 <Gustaf.Neumann@wu-wien.ac.at>
	* backport of autoname fix from nsf

2011-04-28 <Gustaf.Neumann@wu-wien.ac.at>
	* serializer: fix allChildren to handle names with semicolons
	* serializer: fix allInstances to handle names with semicolons

2011-02-09 <Gustaf.Neumann@wu-wien.ac.at>
	* Backport of nsf to handle partial implicit deletes

2011-01-20 <Gustaf.Neumann@wu-wien.ac.at>
	* Change backport of fix below to a check of numEntries

2011-01-20 <Gustaf.Neumann@wu-wien.ac.at>
	* Backport of fix for nsf : fixed a nasty bug within namespace
	deletion, when a deletion of one tcl cmd caused implicit deletions
	of other cmds in the same namespace. The classical idiom for
	looking over hash tables with Tcl_GetHashValue() and
	Tcl_NextHashEntry(hSrch) can lead to crashes (and has different
	behavior depending on the number of buckets). This fix handles
	complete implicit deletes.

2010-12-26 <Gustaf.Neumann@wu-wien.ac.at>
   *  Make cppcheck happy

2010-08-29 <Gustaf.Neumann@wu-wien.ac.at>
    * Fixed bug in filters reported by Kristoffer Lawson.  When a
      filter chain reaches its end without finding the invoked method,
      the unknown state was not resetted correctly and affected